docs: unit artifact -- the eval server is milestone 3's vehicle, not milestone 1's gate (user, 2026-09-09)
Milestone 1 runs t/nqp through the runner; Task 8 loses the nqp
eval-server script; Task 4 keeps the road-agnostic app load.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01YRn8gLyZjirBAKS6urb3n4